changed some figures

--- a/Data Exploration/exploration2.ipynb
+++ b/Data Exploration/exploration2.ipynb
@@ -10324,7 +10324,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 367,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 368,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['rgb(31, 119, 180)',\n",
+       " 'rgb(255, 127, 14)',\n",
+       " 'rgb(44, 160, 44)',\n",
+       " 'rgb(214, 39, 40)',\n",
+       " 'rgb(148, 103, 189)',\n",
+       " 'rgb(140, 86, 75)',\n",
+       " 'rgb(227, 119, 194)',\n",
+       " 'rgb(127, 127, 127)',\n",
+       " 'rgb(188, 189, 34)',\n",
+       " 'rgb(23, 190, 207)']"
+      ]
+     },
+     "execution_count": 368,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plotly.colors.DEFAULT_PLOTLY_COLORS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 373,
    "metadata": {},
    "outputs": [
     {
@@ -10369,6 +10407,11 @@
         "margin": {
          "t": 60
         },
+        "piecolorway": [
+         "#636EFA",
+         "#00CC96",
+         "#EF553B"
+        ],
         "template": {
          "data": {
           "bar": [
@@ -11194,7 +11237,7 @@
     }
    ],
    "source": [
-    "fig = px.pie(df_gen.groupby('gender').count().reset_index(), names='gender', values='profile')\n",
+    "fig = px.pie(df_gen.groupby('gender').count().reset_index(), names='gender', values='profile', color_discrete_sequence=['#636EFA', '#00CC96', '#EF553B'])\n",
     "fig.show()"
    ]
   },
